--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,14 @@ FRONTEND_URL=http://localhost:5173
 # Server
 PORT=3001
 NODE_ENV=development
-AUTO_KENT_DEBUG =false
+
+# SSL Configuration (for production)
+SSL_ENABLED=false
+SSL_CERT_PATH=./ssl/certificate.pem
+SSL_KEY_PATH=./ssl/private-key.pem
+
+# Production URLs
+PUBLIC_URL=https://your-domain.com
 
 # Admin Secret (for creating admin users)
 ADMIN_SECRET=superai-admin-2025
