--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
     "dev:frontend": "npm run dev --prefix frontend",
     "dev:backend": "npm run dev --prefix backend",
-    "init" : "npm install concurrently --save-dev"
+    "init": "npm install concurrently --save-dev"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0"
   }
 }
